// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo renders English logo 1`] = `
<span
  className="hc-c-logo"
>
  <LogoEnSvg />
</span>
`;

exports[`Logo renders Spanish logo 1`] = `
<span
  className="hc-c-logo"
>
  <LogoEsSvg />
</span>
`;
